--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">PDO Database<br>Web App</h4>
                     <h2>eContactz</h2>
-                    <p class="lead">Econtactz illustrates a snapshot of a fullstack web app built from the ground up. My first authored GNU GENERAL PUBLIC LICENSE project. <a href="https://github.com/MeisterWebzr/eContactz"></a>Follow on github</a>.</p>
+                    <p class="lead">Econtactz illustrates a snapshot of a fullstack web app built from the ground up. My first authored GNU GENERAL PUBLIC LICENSE project. </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://meisterwebzr.com/ssl/"><img class="img-responsive" src="../econtact.jpg" alt="eContactz App"></a>
+                    <a href="https://github.com/MeisterWebzr/eContactz"><img class="img-responsive" src="../econtact.jpg" alt="eContactz App"></a>
                 </div>
             </div>
 
