--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Fashion<br>Distributors</h4>
                     <h2>eFashion Template</h2>
-                    <p class="lead">My final project from Full Sail Univeristy. I designed and Developed and template for open-source software ecommerce platoform. This template can be used for many fashion related business.<a href="https://github.com/MeisterWebzr/eFashion"></a>Follow on github</a>. </p>
+                    <p class="lead">My final project from Full Sail Univeristy. I designed and Developed a template for open-source software ecommerce platoform. This template can be used for many fashion related business models.<br><a href="https://github.com/MeisterWebzr/eFashion"></a>Follow on github</a>. </p>
                 </div>
                  <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
@@ -124,14 +124,14 @@
                     <p></p>
                     <p></p>
                     <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
-                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="eFashion.jpg">
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="">
                   </div>
                   <div class="modal-footer">
                     <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
                   </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://meisterwebzr.com/ssl/"><img style="position: relative; top: 45px;"class="img-responsive" src="../efashion.jpg" alt="eFashion App"></a>
+                    <a href="http://meisterwebzr.com/efashion"><img style="position: relative; top: 45px;"class="img-responsive" src="../efashion.jpg" alt="eFashion App"></a>
                     <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
                 </div>
             </div>
