--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Fashion<br>Distributors</h4>
                     <h2>eFashion Template</h2>
-                    <p class="lead">My final project from Full Sail Univeristy. I designed and Developed a template for open-source software ecommerce platoform. This template can be used for many fashion related business models.<br><a href="https://github.com/MeisterWebzr/eFashion"></a>Follow on github</a>. </p>
+                    <p class="lead">My final project from Full Sail Univeristy. I designed and Developed a template for open-source software ecommerce platform. This template can be used for many fashion related business models.<br><a href="https://github.com/MeisterWebzr/eFashion">Follow on github</a>. </p>
                 </div>
                  <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
                 <div class="modal-header">
