updating image link and quote

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Clothing Brand<br>e-Commerce Store</h4>
                     <h2>Fly Zone Apparel</h2>
-                    <p class="lead">I was contracted to re-design the Fly Zone main website with a revolutionary design with key metrics in the back office. This project was fun, Step into the Fly Zone. </p>
+                    <p class="lead">I was contracted to re-design the Fly Zone main website with a revolutionary design with key metrics in the back office. Step into the Fly Zone. </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="https://github.com/MeisterWebzr/eContactz"><img class="img-responsive" src="../flyzone.jpg" alt="Fly Zone Apparel thumb"></a>
+                    <a href="https://www.flyzoneapparel.com"><img class="img-responsive" src="../flyzone2k15.jpg" alt="Fly Zone Apparel thumb"></a>
                 </div>
             </div>
 
