adding http to link and projects id tag

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <p class="lead">I was contracted to re-design the Fly Zone main website with a revolutionary design with key metrics in the back office. Step into the Fly Zone. </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="https://www.flyzoneapparel.com"><img class="img-responsive" src="../flyzone2k15.jpg" alt="Fly Zone Apparel thumb"></a>
+                    <a href="http://www.flyzoneapparel.com"><img class="img-responsive" src="../flyzone2k15.jpg" alt="Fly Zone Apparel thumb"></a>
                 </div>
             </div>
 
@@ -311,7 +311,7 @@
                     <a  href="http://www.g8hosting.com/register.php">Click here to register with us</a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://www.g8hosting.com"><img src="http://s23.postimg.org/wb8vh9a2z/Screen_Shot_2015_02_17_at_11_10_08_AM.png"></a>
+                    <a href="http://www.g8hosting.com"><img class="img-responsive" src="http://s23.postimg.org/wb8vh9a2z/Screen_Shot_2015_02_17_at_11_10_08_AM.png"></a>
                     </div>
                 </div>
             </div>
