--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
             alert("Your browser doesn't support canvas so you wont see my interactive animations. Try using the latest: Safari, Chrome or Opera web browsers. ");
           }
         </script>
-
-
 		 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!--[if lt IE 9]>
 	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -85,7 +83,7 @@
 
             <div id="home"class="row">
                 <div class="col-lg-12">
-                    <div class="intro-message">
+                    <div class="intro-message scrollblock">
                         <h1 id="fade-in">Otto Burroughs</h1>
                         <h3>"The heart and soul of the company is creativity and innovation." B, Iger</h3>
                         <hr class="intro-divider">
