--- a/index.html
+++ b/index.html
@@ -481,39 +481,50 @@
     </div>
     <!-- /.content-section-a  END-->
 
-
-
-    <!-- /Section A  start-->
-
+    <!-- Contact Section Begin --> 
     <div class="banner">
-
-        <div id="contact" class="container">
-
-            <div class="row-fluid">
-                <div class="col-lg-6" id="mConnect">
-                    <h2>Connect w/ Meister:</h2>
+            <div class="container">
+                <div class="row">
+                <div class="col-sm-4">
+                    <h3>Request my time!</h3>
+                    <hr>
+                    <address>
+                    <strong>Email:</strong> <a href="mailto:freelancer@meisterwebzr.com"> Freelancer@meisterwebzr.com</a><br><br>
+                    <strong>Rates:</strong> Start @ $35/hr depending on project scope.
+                    </address>
                 </div>
-                <div class="col-lg-12">
-                    <ul id="socialBTNS"class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/MeisterWebzr" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/oburroughs" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
+                        
+                <div class="col-sm-8 contact-form">
+                    <form id="contact" method="post" class="form" role="form">
+                        <div class="row">
+                        <div class="col-xs-6 col-md-6 form-group">
+                        <input class="form-control" id="name" name="name" placeholder="Name" type="text" required autofocus />
+                        </div>
+                        <div class="col-xs-6 col-md-6 form-group">
+                        <input class="form-control" id="email" name="email" placeholder="Email" type="email" required />
+                        </div>
+                        </div>
+                        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5"></textarea>
+                        <br />
+                        <div class="row">
+                        <div class="col-xs-12 col-md-12 form-group">
+                        <button class="btn btn-primary pull-right" type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
-
-        </div>
-        <!-- /.container -->
-
     </div>
     <!-- /.banner -->
 
+
+
+
+
+
+
+
+
+
+    <!-- Connect Section End -->
     <!-- Footer -->
     <footer>
         <div class="container">
