updating projects tag position

--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
 <html lang="en">
 <head>
 		<meta charset="utf-8">
-
-
 		<title>La Mirada Web Designer &amp; Developer | Portfolio</title>
-
 		<meta name="description" content="ePortfolio">
 		<meta name="author" content="Otto Burroughs">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-		
 		<!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" type="text/css" href="http://jschr.github.io/bootstrap-modal/css/bootstrap-modal-bs3patch.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="portfolio.css">
-
 		<!-- Custom Font-->
 		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-        
         <!-- Animation Javascript -->
         <script src="js/modernizr_2.8.3.js"></script>
         <script>
@@ -39,12 +32,12 @@
 
 </head>
 <header>
-		<div></div>
+		
 </header>
-<body>
+<body id="home">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav  class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -77,11 +70,11 @@
 
     
     <!-- Header -->
-    <div class="intro-header">
+    <div  class="intro-header">
 
         <div class="container">
 
-            <div id="home"class="row">
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message scrollblock">
                         <h1 id="fade-in">Otto Burroughs</h1>
@@ -111,7 +104,7 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
-    <div id="projects"></div>
+    <div id="projects" class="top-clearz"></div>
     <!-- section b-->
     <div class="content-section-b">
 
@@ -514,15 +507,6 @@
             </div>
     </div>
     <!-- /.banner -->
-
-
-
-
-
-
-
-
-
 
     <!-- Connect Section End -->
     <!-- Footer -->
