updating contact form email

--- a/index.html
+++ b/index.html
@@ -479,16 +479,16 @@
             <div class="container">
                 <div class="row">
                 <div class="col-sm-4">
-                    <h3>Request my time!</h3>
+                    <h3>Need help? Request my time!</h3>
                     <hr>
                     <address>
                     <strong>Email:</strong> <a href="mailto:freelancer@meisterwebzr.com"> Freelancer@meisterwebzr.com</a><br><br>
-                    <strong>Rates:</strong> Start @ $35/hr depending on project scope.
+                    <strong>Rates:</strong> From $35/hr depending on project scope.
                     </address>
                 </div>
                         
                 <div class="col-sm-8 contact-form">
-                    <form id="contact" method="post" class="form" role="form">
+                    <form id="contact" method="post" action="mailto:freelancer@meisterwebzr.com" class="form" role="form">
                         <div class="row">
                         <div class="col-xs-6 col-md-6 form-group">
                         <input class="form-control" id="name" name="name" placeholder="Name" type="text" required autofocus />
