--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 </div>
                         
                 <div class="col-sm-8 contact-form">
-                    <form id="contact" method="post" action="contact.php" class="form" role="form">
+                    <form id="contact" method="post" action="mailto:freelancer@meisterwebzr.com" class="form" role="form">
                         <div class="row">
                         <div class="col-xs-6 col-md-6 form-group">
                         <input class="form-control" id="name" name="name" placeholder="Name" type="text" required autofocus />
