--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Art History:<br>Apple Halftones</h2>
-                    <p class="lead">Here I designed in with Cs6 master suite tools and tricks to create a radiant apple logo with half tones. NO SHADING, just black and white.</p>
+                    <p class="lead">I designed this in with Cs6 master suite  with a few tools and tricks to create a radiant apple logo with half tones. NO SHADING, just black and white.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="http://i57.tinypic.com/2nsxjlv.png" alt="">
@@ -461,7 +461,8 @@
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img style="position: relative; top: 55px;" class="img-responsive" src="http://i61.tinypic.com/2w6igbb.jpg" alt="">
-                    <button style="position: relative; top: 75px;"type="button" data-toggle="modal" href="#responsive" class="btn btn-default">Details</button>
+                    <!--<button style="position: relative; top: 75px;"type="button" data-toggle="modal" href="#responsive" class="btn btn-default">Details</button>-->
+
                     <button style="position: relative; top: 75px; left 35px; " type="button"  class="btn btn-default"><a href="https://github.com/MeisterWebzr/WDP">Repo</a></button>
                     <button style="position: relative; top: 75px; left 70px; " type="button"  class="btn btn-default"><a href="http://meisterwebzr.github.io/WDP/index.html">Live</a></button>
                 </div>
@@ -474,19 +475,14 @@
 
     <!-- Contact Section Begin --> 
     <div class="banner">
-        <div class="container">
-
-            <?=$thankYou ?>
-
-        </div>
             <div class="container">
                 <div class="row">
                 <div class="col-sm-4">
-                    <h3>Need help? Request my time!</h3>
+                    <h2 style="color: black;">Need help? </h2>
                     <hr>
                     <address>
-                    <strong></strong> </a><br><br>
-                    <strong>Rates:</strong> From $35/hr depending on project scope.
+                    <h2 style="color: black;"> Request my time!</h2><br>
+                    <h3 style="color: green;">Rates from $35 per hour</h3>
                     </address>
                 </div>
                         
