updating linkedin profile link in nav

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact Me</a>
+                        <a href="https://www.linkedin.com/in/oburroughs">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -474,8 +474,6 @@
     <!-- /.content-section-a  END-->
 
     <!-- Contact Section Begin --> 
-    
-    <!--
     <div class="banner">
             <div class="container">
                 <div class="row">
@@ -507,8 +505,6 @@
                 </div>
             </div>
     </div>
-
-    -->
     <!-- /.banner -->
 
     <!-- Connect Section End -->
@@ -528,7 +524,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="https://www.linkedin.com/in/oburroughs">Contact</a>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Otto "Meister" Burroughs. All Rights Reserved</p>
