added Bassline Group to portfolio.

--- a/index.html
+++ b/index.html
@@ -103,24 +103,61 @@
 
     <!-- Page Content -->
     <div id="projects" class="top-clearz"></div>
+    <!-- content-section-a -->
+    <div class="content-section-a">
+
+        <div  class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Video<br>Marketing</h4>
+                    <h2>Chicago Based Agenecy</h2>
+                    <p class="lead">I was contacted by the Founder of <a href="http://thebasslinegroup.com/founder/">The Bassline Group</a>,<b> Patrice K. Cokley</b>. To create a video opener for her new Video Series. Made in Ae with elements from Ai.</p>
+                </div>
+                 <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title"></h4>
+                  </div>
+                  <div class="modal-body">
+                    <p></p>
+                    <p></p>
+                    <div class="well well-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> "</div>
+                    <img style="position: relative; left: 95px;"class="img-center img-zoom" src="">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+                  </div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <div class="responsive-vide"><iframe width="400" height="200" src="https://www.youtube.com/embed/KYZszdoTBfQ?feature=player_detailpage" frameborder="0" allowfullscreen></iframe></div>
+                    <!--<button type="button" data-toggle="modal" href="#full-width" class="btn btn-default">Details</button>-->
+                </div>
+            </div>
+        </div>
+        <!-- /.container a -->
+
+
+
+
     <!-- section b-->
     <div class="content-section-b">
 
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Clothing Brand<br>e-Commerce Store</h4>
                     <h2>Fly Zone Apparel</h2>
-                    <p class="lead">I was contracted to re-design the Fly Zone main website with a revolutionary design with key metrics in the back office. Step into the Fly Zone. </p>
+                    <p class="lead">I was contracted to re-design the Fly Zone main website with a revolutionary design with key metrics in the back office. Step into the Fly Zone.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="http://www.flyzoneapparel.com"><img class="img-responsive" src="../flyzone2k15.jpg" alt="Fly Zone Apparel thumb"></a>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
 
