editing agency typo

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Video<br>Marketing</h4>
-                    <h2>Chicago Based Agenecy</h2>
+                    <h2>Chicago Based Agency</h2>
                     <p class="lead">I was contacted by the Founder of <a href="http://thebasslinegroup.com/founder/">The Bassline Group</a>,<b> Patrice K. Cokley</b>. To create a video opener for her new Video Series. Made in Ae with elements from Ai.</p>
                 </div>
                  <div id="full-width" class="modal container fade" tabindex="-1" style="display: none;">
