updated portfolio items

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Bully Clothing<br>Breeder Marketing Service</h4>
                     <h2>Hard Knox</h2>
-                    <p class="lead">I originally spoke with owner, Angela knox's a year before she contracted my services. Since then she has been content and growing her business with new bully marketing kits and apparel within the ABKC community. E-commerce store and news portal was designed to better serve her entire business.</p>
+                    <p class="lead">I originally spoke with owner, Angela knox's, a year before she contracted my services. Since then she has been content and growing her business with new bully marketing kits and apparel within the ABKC community. E-commerce store and news portal was designed to better serve her entire business.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="http://www.hardknox.co/about-us/"><img class="img-responsive" src="hardknox.jpg" alt="Tri City Nupes"></a>
