added Kat Riel and Vector Iamgery to the portfolio.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,50 @@
 
 
 
+
+    <!-- section b-->
+    <div class="content-section-b">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Visual Media<br>Vecotor Graphics</h4>
+                    <h2>Rich Media Optimization</h2>
+                    <p class="lead">This is one assignment that was awarded an "A" for proper use of adobe illustator. I wanted to add to the existing Full Sail ESPN media department with an updated logo for it's radio division. Composed of mathematicaly-defined geometric shapes-lines, objects and fills. Benefiting from infinite scalability with smaller file sizes.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <a href=""><img class="img-responsive" src="rmo.jpg" alt="Full Sail Radio"></a>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+    <!-- content-section-a -->
+    <div class="content-section-a">
+
+        <div  class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Import Model<br>Actress</h4>
+                    <h2>Kat Riel</h2>
+                    <p class="lead">I designed this model website in xhtml with flash cs6. This presenation is packed with high quality images and ful screen video backgrounds. An older project, but a great one to review none the less. Photographers, models or actors can web deisgn.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <a href="http://192.185.180.159/~misskat/"><img class="img-responsive" src="kat.jpg" alt="Import Model- Kat Riel"></a>
+                </div>
+            </div> 
+        </div>
+    </div>
+    <!-- /.container a -->
+
+
     <!-- section b-->
     <div class="content-section-b">
 
@@ -133,7 +177,7 @@
     <!-- /.content-section-b -->
 
 
-     <!-- content-section-a -->
+    <!-- content-section-a -->
     <div class="content-section-a">
 
         <div  class="container">
