--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Import Model<br>Actress</h4>
                     <h2>Kat Riel</h2>
-                    <p class="lead">I designed this model website in xhtml with flash cs6. This presenation is packed with high quality images and ful screen video backgrounds. An older project, but a great one to review none the less. Photographers, models or actors can web deisgn.</p>
+                    <p class="lead">I designed this model website in xhtml with flash cs6. This presenation is packed with high quality images and ful screen video backgrounds. An older project, but a great one to review none the less. Photographers, models or actors contact me for your web deisgn.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="http://192.185.180.159/~misskat/"><img class="img-responsive" src="katriel.jpg" alt="Import Model- Kat Riel"></a>
