--- a/index.html
+++ b/index.html
@@ -110,6 +110,27 @@
 
 
 
+    <!-- content-section-a -->
+    <div class="content-section-a">
+
+        <div  class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h4 class="section-heading">Meal Prep<br>Paleo Meals</h4>
+                    <h2>Creative Caveman Inc.</h2>
+                    <p class="lead">Overhauled this website to better serve subscriptions and recuuring orders with affordances for affiliates and member accounts. Creative Caveman was previously built on,  "Wix - Do it Yourself," but the staff was having difficulties with administering multiple orders as well as processing these orders as registered members. After a brief chat and Creative Caveman Inc's review of my portfolio we set out and accomplished our goal with CC GRUB.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <a href="http://www.ccgrub.com"><img class="img-responsive" src="ccgrub.jpg" alt="Creative Caveman - Paleo Meals Delivered"></a>
+                </div>
+            </div> 
+        </div>
+    </div>
+    <!-- /.container a -->
+
+
 
     <!-- section b-->
     <div class="content-section-b">
