--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="clearfix"></div>
                     <h4 class="section-heading">Meal Prep<br>Paleo Meals</h4>
                     <h2>Creative Caveman Inc.</h2>
-                    <p class="lead">Creative Caveman was previously built on,  "Wix - Do it Yourself," but the staff was having difficulties with administering multiple orders as well as processing these orders as registered members. After a brief chat and Creative Caveman Inc's review of my portfolio we set out and accomplished our goal with CC GRUB.</p>
+                    <p class="lead">Creative Caveman was previously built on, "Wix - Do it Yourself," but the staff was having difficulties with administering multiple orders as well as processing these orders as registered members. After a brief chat and review of my portfolio we set out and accomplished our goal with CC GRUB.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="http://www.ccgrub.com"><img class="img-responsive" src="ccgrub.jpg" alt="Creative Caveman - Paleo Meals Delivered"></a>
